--- a/notebooks/preprocessing_and_visualization.ipynb
+++ b/notebooks/preprocessing_and_visualization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "06b3e6a4",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "49010f79",
    "metadata": {},
    "outputs": [],
@@ -49,20 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "bb3e2c7f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_features(df):\n",
     "    numeric_cols = [c for c in df.columns if pd.api.types.is_numeric_dtype(df[c])]\n",
-    "    categorical_cols = [c for c in df.columns if c not in numeric_cols]\n",
     "\n",
-    "    # === Plot distributions ===\n",
     "    all_cols = df.columns\n",
     "    n = len(all_cols)\n",
     "\n",
-    "    # Definir layout da grelha (ajusta consoante nº de features)\n",
     "    ncols = 4\n",
     "    nrows = int(np.ceil(n / ncols))\n",
     "\n",
@@ -80,7 +77,6 @@
     "        ax.set_xlabel(\"\")\n",
     "        ax.grid(False)\n",
     "\n",
-    "    # Apagar eixos vazios (se nº de features < nrows*ncols)\n",
     "    for j in range(i+1, len(axes)):\n",
     "        fig.delaxes(axes[j])\n",
     "\n",
@@ -90,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "3565838c",
    "metadata": {},
    "outputs": [],
@@ -152,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "d6644de8",
    "metadata": {},
    "outputs": [
@@ -349,7 +345,7 @@
        "2110  Sometimes  Public_Transportation  Obesity_Type_III  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "23b3eb53",
    "metadata": {},
    "outputs": [],
@@ -402,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "b48012e7",
    "metadata": {},
    "outputs": [
@@ -599,7 +595,7 @@
        "2110  Public_Transportation  Obesity_Type_III  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,9 +607,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b22a7ce5",
+   "metadata": {},
+   "source": [
+    "### Summary statistics\n",
+    "- Média, variância, standard deviation, mediana, percentil, mode, covariância e correlação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "440273a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    2111.000000\n",
+      "mean       24.315964\n",
+      "std         6.357078\n",
+      "min        14.000000\n",
+      "25%        20.000000\n",
+      "50%        23.000000\n",
+      "75%        26.000000\n",
+      "max        61.000000\n",
+      "Name: Age, dtype: float64 \n",
+      "\n",
+      "count    2111.000000\n",
+      "mean       86.585978\n",
+      "std        26.191165\n",
+      "min        39.000000\n",
+      "25%        65.450000\n",
+      "50%        83.000000\n",
+      "75%       107.450000\n",
+      "max       173.000000\n",
+      "Name: Weight, dtype: float64 \n",
+      "\n",
+      "count    2111.000000\n",
+      "mean        1.701620\n",
+      "std         0.093368\n",
+      "min         1.450000\n",
+      "25%         1.630000\n",
+      "50%         1.700000\n",
+      "75%         1.770000\n",
+      "max         1.980000\n",
+      "Name: Height, dtype: float64 \n",
+      "\n",
+      "\n",
+      "=== Gender ===\n",
+      "        Counts  Proportion (%)  Mode\n",
+      "Gender                              \n",
+      "Male      1068           50.59  Male\n",
+      "Female    1043           49.41  Male\n",
+      "\n",
+      "=== family_history_with_overweight ===\n",
+      "                                Counts  Proportion (%) Mode\n",
+      "family_history_with_overweight                             \n",
+      "yes                               1726           81.76  yes\n",
+      "no                                 385           18.24  yes\n",
+      "\n",
+      "=== NObeyesdad ===\n",
+      "                     Counts  Proportion (%)            Mode\n",
+      "NObeyesdad                                                 \n",
+      "Obesity_Type_I          351           16.63  Obesity_Type_I\n",
+      "Obesity_Type_III        324           15.35  Obesity_Type_I\n",
+      "Obesity_Type_II         297           14.07  Obesity_Type_I\n",
+      "Overweight_Level_I      290           13.74  Obesity_Type_I\n",
+      "Overweight_Level_II     290           13.74  Obesity_Type_I\n",
+      "Normal_Weight           287           13.60  Obesity_Type_I\n",
+      "Insufficient_Weight     272           12.88  Obesity_Type_I\n",
+      "\n",
+      "=== FAVC ===\n",
+      "      Counts  Proportion (%) Mode\n",
+      "FAVC                             \n",
+      "yes     1866           88.39  yes\n",
+      "no       245           11.61  yes\n",
+      "\n",
+      "=== FCVC ===\n",
+      "      Counts  Proportion (%)  Mode\n",
+      "FCVC                              \n",
+      "2       1013           47.99     2\n",
+      "3        996           47.18     2\n",
+      "1        102            4.83     2\n",
+      "\n",
+      "=== NCP ===\n",
+      "     Counts  Proportion (%)  Mode\n",
+      "NCP                              \n",
+      "3      1619           76.69     3\n",
+      "1       316           14.97     3\n",
+      "2       176            8.34     3\n",
+      "\n",
+      "=== CAEC ===\n",
+      "            Counts  Proportion (%)       Mode\n",
+      "CAEC                                         \n",
+      "Sometimes     1765           83.61  Sometimes\n",
+      "Frequently     242           11.46  Sometimes\n",
+      "Always          53            2.51  Sometimes\n",
+      "no              51            2.42  Sometimes\n",
+      "\n",
+      "=== SMOKE ===\n",
+      "       Counts  Proportion (%) Mode\n",
+      "SMOKE                             \n",
+      "no       2067           97.92   no\n",
+      "yes        44            2.08   no\n",
+      "\n",
+      "=== CH2O ===\n",
+      "      Counts  Proportion (%)  Mode\n",
+      "CH2O                              \n",
+      "2       1110           52.58     2\n",
+      "3        516           24.44     2\n",
+      "1        485           22.97     2\n",
+      "\n",
+      "=== SCC ===\n",
+      "     Counts  Proportion (%) Mode\n",
+      "SCC                             \n",
+      "no     2015           95.45   no\n",
+      "yes      96            4.55   no\n",
+      "\n",
+      "=== FAF ===\n",
+      "     Counts  Proportion (%)  Mode\n",
+      "FAF                              \n",
+      "1       776           36.76     1\n",
+      "0       720           34.11     1\n",
+      "2       496           23.50     1\n",
+      "3       119            5.64     1\n",
+      "\n",
+      "=== TUE ===\n",
+      "     Counts  Proportion (%)  Mode\n",
+      "TUE                              \n",
+      "0       952           45.10     0\n",
+      "1       915           43.34     0\n",
+      "2       244           11.56     0\n",
+      "\n",
+      "=== CALC ===\n",
+      "            Counts  Proportion (%)       Mode\n",
+      "CALC                                         \n",
+      "Sometimes     1401           66.37  Sometimes\n",
+      "no             639           30.27  Sometimes\n",
+      "Frequently      70            3.32  Sometimes\n",
+      "Always           1            0.05  Sometimes\n",
+      "\n",
+      "=== MTRANS ===\n",
+      "                       Counts  Proportion (%)                   Mode\n",
+      "MTRANS                                                              \n",
+      "Public_Transportation    1580           74.85  Public_Transportation\n",
+      "Automobile                457           21.65  Public_Transportation\n",
+      "Walking                    56            2.65  Public_Transportation\n",
+      "Motorbike                  11            0.52  Public_Transportation\n",
+      "Bike                        7            0.33  Public_Transportation\n"
+     ]
+    }
+   ],
+   "source": [
+    "continuous_cols = [\"Age\", \"Weight\", \"Height\"]\n",
+    "discrete_cols = [\"Gender\", \"family_history_with_overweight\", \"NObeyesdad\", \"FAVC\", \"FCVC\", \"NCP\", \"CAEC\", \"SMOKE\", \"CH2O\", \"SCC\", \"FAF\", \"TUE\", \"CALC\", \"MTRANS\"]\n",
+    "\n",
+    "for col in continuous_cols:\n",
+    "    print(df_clean[col].describe(), \"\\n\")\n",
+    "\n",
+    "    summary = {}\n",
+    "\n",
+    "for col in discrete_cols:\n",
+    "    counts = df_clean[col].value_counts()\n",
+    "    proportions = df_clean[col].value_counts(normalize=True) * 100\n",
+    "    mode = df_clean[col].mode()[0]\n",
+    "\n",
+    "    summary[col] = pd.DataFrame({\n",
+    "        \"Counts\": counts,\n",
+    "        \"Proportion (%)\": proportions.round(2)\n",
+    "    })\n",
+    "    summary[col][\"Mode\"] = mode   # adiciona a moda em todas as linhas para esse atributo\n",
+    "\n",
+    "    print(f\"\\n=== {col} ===\")\n",
+    "    print(summary[col])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "440273a4",
+   "id": "73fb55a9",
    "metadata": {},
    "outputs": [],
    "source": []
